log
Fri 05 May 2023 06:28:06 PM UTC: 
 tests:  0|5
total_score: 0/70
934665f
Fri 05 May 2023 06:35:36 PM UTC: 
 sudoku.c | 38 +++++++++++++++++++++++++-------------
 1 file changed, 25 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:16: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   68 |         return list;
      |                ^~~~
      |                List
sudoku.c:68:16: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:74:1: error: control reaches end of non-void function [-Werror=return-type]
   74 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
30c225c
